[package]
name = "esp_display_hello"
version = "0.1.0"
authors = ["martin auf Linus <martin@para-travel.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = ["esp32c3", "async"] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32c3"] }
esp-println = { version = "0.11.0", features = ["esp32c3", "log"] }
esp-storage = { version = "0.3.0", features = ["esp32c3"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.9.1", features = [
    "esp32c3",
    "phy-enable-usb",
    "utils",
    "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
ssd1306 = "0.9.0"
embedded-graphics = "*"

ms5611 = { git = "https://github.com/mwesterm/ms5611-rs.git" }

embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-12288",
    "integrated-timers",
] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-sync = "0.6.0"
embassy-time = "0.3.1"
embassy-time-driver = { version = "0.1.0", optional = true }


embedded-hal = { version = "1.0" }
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-io-async = "0.6.1"


static_cell = "2.1.0"
time = { version = "0.3", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false


[features]
esp32c3 = ["esp-hal/esp32c3"]
